--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -49,10 +49,14 @@ $sorting-bg-dark: rgb(80, 88, 105);
 $sorting-border: rgb(194, 208, 239);
 $sorting-border-dark: rgb(50, 57, 80);
 
-$scrollbar-track-dark: rgba(255, 255, 255, 0.2);
-$scrollbar-thumb-dark: rgba(255, 255, 255, 0.75);
-$scrollbar-track: rgba(0, 0, 0, 0.2);
-$scrollbar-thumb: rgba(0, 0, 0, 0.55);
+$scrollbar-track-dark-active: rgba(255, 255, 255, 0.2);
+$scrollbar-thumb-dark-active: rgba(255, 255, 255, 0.75);
+$scrollbar-track-dark-inactive: rgba(255, 255, 255, 0.1);
+$scrollbar-thumb-dark-inactive: rgba(255, 255, 255, 0.25);
+$scrollbar-track-active: rgba(0, 0, 0, 0.2);
+$scrollbar-thumb-active: rgba(0, 0, 0, 0.55);
+$scrollbar-track-inactive: rgba(0, 0, 0, 0.1);
+$scrollbar-thumb-inactive: rgba(0, 0, 0, 0.25);
 
 $shadow: rgba(73, 76, 85, 0.12);
 $semi-black: rgba(33, 33, 33, 0.8);
